removed unknown cvars

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -36,7 +36,6 @@ player_nevershow_communityservermessage "1"
 cl_allowdownload				"0"
 cl_allowupload	    			"0"
 cl_downloadfilter				"nosounds"
-cl_cloud_settings				"0"
 cl_righthand					"1"
 cl_autowepswitch				"0"
 cl_autohelp				    	"0"
@@ -89,7 +88,6 @@ cl_lagcompensation              "1"
 cl_forcepreload                 "1"
 cl_predict                      "1"
 cl_predictweapons               "1"
-cl_smooth			        	"0"
 
 //*************************************************
 //*************************************************
@@ -104,7 +102,6 @@ m_customaccel					"0"
 m_customaccel_exponent			"0"
 m_customaccel_max				"0"
 m_customaccel_scale				"0"
-m_filter				    	"0"
 m_forward			    		"1"
 m_mouseaccel1					"0"
 m_mouseaccel2					"0"
@@ -113,7 +110,6 @@ m_pitch				    		"0.022"
 m_rawinput			    		"1"
 m_side				    		"0.8"
 m_yaw				    		"0.022"
-zoom_sensitivity_ratio			"1"
 zoom_sensitivity_ratio_mouse    "1.0"
 
 //*************************************************
@@ -122,9 +118,9 @@ zoom_sensitivity_ratio_mouse    "1.0"
 //*************************************************
 //*************************************************
 
-con_filter_enable "2"
-con_filter_text "Damage"
-con_filter_text_out "Player:"
+con_filter_enable               "2"
+con_filter_text                 "Damage"
+con_filter_text_out             "Player:"
 
 //*************************************************
 //*************************************************
@@ -140,7 +136,6 @@ snd_use_hrtf                    "1" //Turn ON Head-Related Transfer Function
 snd_mixahead                    "0.05" // sound delay
 snd_mute_losefocus              "1" // mute game when alt-tabbed
 snd_legacy_surround				"0"
-snd_surround_speakers			"0"
 snd_menumusic_volume            "0"
 lobby_voice_chat_enabled        "0" // voice chat in lobby
 windows_speaker_config          "1" // default=-1 - -1=Automatic 1=Headset 3=4Speakers 4=StereoSpeakers 6=5.1 Surround
@@ -153,12 +148,8 @@ cl_mute_enemy_team              "0"
 //*************************************************
 //*************************************************
 
-hud_scaling                     "0.95" 
+hud_scaling                     "0.75" 
 hud_showtargetid                "1"
-hud_drawhistory_time			"5"
-hud_fastswitch					"1"
-hud_saytext_time				"12"
-hud_deathnotice_time			"6"
 hud_takesshots                  "0"
 cl_hud_background_alpha         "0.2"
 cl_hud_bomb_under_radar         "1"
@@ -188,12 +179,13 @@ cl_teammate_colors_show         "2"
 //*************************************************
 //*************************************************
 
-cl_radar_rotate             "0"
-cl_radar_always_centered    "0" // 0 centrerar map istället för spelare
-cl_radar_scale              "0.4"
-cl_radar_icon_scale_min     "1"
-safezonex                "0.85"
-safezoney                "0.85"
+cl_radar_rotate                 "0"
+cl_radar_always_centered        "0"     // 0 centrerar map istället för spelare
+cl_radar_scale                  "0.4"
+cl_radar_icon_scale_min         "1"
+cl_radar_square_with_scoreboard "1"
+safezonex                       "0.85"
+safezoney                       "0.85"
 
 //*************************************************
 //*************************************************
@@ -201,33 +193,19 @@ safezoney                "0.85"
 //*************************************************
 //*************************************************
 
-// alias "+ng" "+showscores; net_graph 1"
-// alias "-ng" "-showscores; net_graph 0"
-// net_graphheight "128"
-// net_graphholdsvframerate "0"
-// net_graphmsecs "400"
-// net_graphpos "1"
-// net_graphproportionalfont "1"
-// net_graphshowinterp "1"
-// net_graphshowlatency "1"
-// net_graphshowsvframerate "0"
-// net_graphsolid "1"
-// net_graphtext "1"
-
-// net_graph					"0"
-// net_graphpos					"1"
-
-net_graph "1" //Shows my network usage data
-net_graphheight "0" //Changes height
-net_graphmsecs "400" //The latency graph represents this many milliseconds
-net_graphpos "2" //Positioning of Net Graph
-net_graphproportionalfont "1" //Makes font smaller
-net_graphshowinterp "1" //Shows interpolation value
-net_graphshowlatency "1" //Shows latency value
-net_graphsolid "1" //Solid Net Graph
-net_graphtext "1" //Shows text fields
-net_maxroutable "1200" //Requested max packet size before packets are 'split'
-net_scale "5" //Makes font smaller
+net_graph                       "0"     // Shows my network usage data
+net_graphheight                 "128"   // Changes height
+net_graphmsecs                  "400"   // The latency graph represents this many milliseconds
+net_graphpos                    "2"     // Positioning of Net Graph
+net_graphproportionalfont       "1"     // Makes font smaller
+net_graphshowinterp             "1"     // Shows interpolation value
+net_graphshowlatency            "1"     // Shows latency value
+net_graphholdsvframerate        "0"     // Hold worst case in server framerate line
+net_graphshowsvframerate        "0"     // Draw the server framerate graph
+net_graphsolid                  "1"     // Solid Net Graph
+net_graphtext                   "1"     // Shows text fields
+net_maxroutable                 "1200"  // Requested max packet size before packets are 'split'
+net_scale                       "5"     // Makes font smaller
 
 //*************************************************
 //*************************************************
@@ -238,9 +216,6 @@ net_scale "5" //Makes font smaller
 mat_setvideomode                1728 1080 0 1
 mat_monitorgamma                "1.7"
 mat_monitorgamma_tv_enabled     "0"
-
-weapon_recoil_model 0
-mat_postprocess_enable 0
 
 //*************************************************
 //*************************************************
@@ -267,27 +242,34 @@ cl_bobcycle                     "0.98"
 cl_viewmodel_shift_left_amt     "0.5"
 cl_viewmodel_shift_right_amt    "0.3"
 
+echo ""
+echo ""
+echo "Config Loaded Complete! (2/2)"
+echo ""
+echo ""
+echo ""
 
-echo Config Loaded! (2/2) //This just confirms that the config has ended successfully
+echo ""
+echo ""
+echo "Scripts Loaded! (1/2)"
+echo ""
+echo ""
+echo ""
 
+//*************************************************
+//*************************************************
+//************** SHOW NET_GRAPH *******************
+//*************************************************
+//*************************************************
 
-echo Scripts Loaded (1/2)
-
-
-// Netgraph + Scoreboard
-alias "+scorenet" "+showscores; net_graphheight 0"
-alias "-scorenet" "-showscores; net_graphheight 9999"
+alias "+scorenet" "+showscores; net_graph 1"
+alias "-scorenet" "-showscores; net_graph 0"
 
 //*************************************************
 //*************************************************
 //***************** CROSSHAIR *********************
 //*************************************************
 //*************************************************
-
-// exec crosshair_red_and_dynamic.cfg
-// exec crosshair_small_teal_dynamic.cfg
-// exec crosshair_small_teal_static.cfg
-// exec crosshair_banana_gaming.cfg
 
 // How to add new crosshair:
 // 1. create file "crosshair_XXX.cfg".
@@ -349,7 +331,6 @@ alias "a11" developer 1
 alias "a12" con_filter_enable 0
 alias "a13" showconsole
 alias "showcrosshair" "a1;a2;a3;a4;a5;a6;a7;a8;a9;a10;a11;a12;a13"
-
 
 weapon_showproficiency				"1"
 
@@ -480,8 +461,12 @@ alias usebomb "use weapon_c4; bind q knife"
 // alias def4 "bind 3 knife"
 // alias def6 "bind v +voicerecord //CHANGE THE "V" TO YOUR VOICE KEY"
 
-
-echo Scripts Loaded (2/2)
+echo ""
+echo ""
+echo "Scripts Loaded Complete! (1/2)"
+echo ""
+echo ""
+echo ""
 
 //*************************************************
 //*************************************************
@@ -521,7 +506,6 @@ bind , "buyammo1"
 bind . "buyammo2"
 bind \ "toggleconsole"
 bind "SPACE" "+jump"
-// bind "TAB" "+ng"
 bind "TAB" "+scorenet" //Bind to whatever you prefer (Default TAB)
 bind "ESCAPE" "cancelselect"
 bind "DEL" "exec autoexec"
@@ -542,21 +526,6 @@ bind "MOUSE4" "primary"
 bind "MOUSE5" "flash; r_cleardecals"
 bind "MWHEELUP" "invprev"
 bind "MWHEELDOWN" "lastinv"
-
-
-//exec rate_cfg.cfg
-//exec mouse_cfg.cfg
-//exec console_cfg.cfg
-//exec audio_cfg.cfg
-//exec hud_cfg.cfg
-//exec radar_cfg.cfg
-//exec net_graph_cfg.cfg
-//exec video_cfg.cfg
-//exec viewmodel_cfg.cfg
-//exec crosshair_cfg.cfg
-//exec weapon_cfg.cfg
-//exec scripts_cfg.cfg
-//exec binds_cfg.cfg
 
 host_writeconfig // write settings to config.cfg
 host_writeconfig // write settings to config.cfg
