removed unknown cvar

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,10 +1,16 @@
 
-
 //*************************************************
 //*************************************************
 //******************** START **********************
 //*************************************************
 //*************************************************
+
+con_enable                      "1"
+developer                       "1"
+unbindall
+clear
+clear_anim_cache
+clear_debug_overays
 
 echo ""
 echo ""
@@ -13,12 +19,6 @@ echo ""
 echo ""
 echo ""
 
-con_enable                      "1"
-developer                       "1"
-unbindall
-clear
-clear_anim_cache
-clear_debug_overlays
 ai_clear_bad_links
 fps_max                         "0"
 fps_max_menu                    "0"
@@ -332,8 +332,6 @@ alias "a12" con_filter_enable 0
 alias "a13" showconsole
 alias "showcrosshair" "a1;a2;a3;a4;a5;a6;a7;a8;a9;a10;a11;a12;a13"
 
-weapon_showproficiency				"1"
-
 //*************************************************
 //*************************************************
 //***************** WEAPON BUY ********************
@@ -463,7 +461,7 @@ alias usebomb "use weapon_c4; bind q knife"
 
 echo ""
 echo ""
-echo "Scripts Loaded Complete! (1/2)"
+echo "Scripts Loaded Complete! (2/2)"
 echo ""
 echo ""
 echo ""
