Added two new cl cvars

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -46,6 +46,8 @@ cl_showpos                      "0"
 cl_loadout_colorweaponnames 	"1"
 cl_use_opens_buy_menu           "1" // E opening buy menu
 cl_showhelp                     "0"
+cl_show_team_equipment          "1"
+cl_teamid_overhead_always       "1"
 
 //*************************************************
 //*************************************************
