- changed new cl cvar - added sens switch - added sound switch - added crosshair_null.cfg to not have two of the same when switching - moved altbinds code - added bind for missing numbers and letters

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -46,8 +46,8 @@ cl_showpos                      "0"
 cl_loadout_colorweaponnames 	"1"
 cl_use_opens_buy_menu           "1" // E opening buy menu
 cl_showhelp                     "0"
-cl_show_team_equipment          "1"
 cl_teamid_overhead_always       "1"
++cl_show_team_equipment
 
 //*************************************************
 //*************************************************
@@ -115,6 +115,22 @@ zoom_sensitivity_ratio_mouse    "1.0"
 
 //*************************************************
 //*************************************************
+//***************** SENSITIVITY *******************
+//*************************************************
+//*************************************************
+
+alias change_sens "sens1"
+alias sens1 "0.1; alias change_sens sens2"
+alias sens1 "0.1; alias change_sens sensLast"
+
+alias sensLast "alias change_sens sens1; playvol buttons\blip1 0.5"
+
+alias defS "bind s +back"
+alias altS "bind s keyS"
+alias keyS "change_sens"
+
+//*************************************************
+//*************************************************
 //****************** CONSOLE **********************
 //*************************************************
 //*************************************************
@@ -142,6 +158,64 @@ lobby_voice_chat_enabled        "0" // voice chat in lobby
 windows_speaker_config          "1" // default=-1 - -1=Automatic 1=Headset 3=4Speakers 4=StereoSpeakers 6=5.1 Surround
 dsp_enhance_stereo              "0" //default=0
 cl_mute_enemy_team              "0"
+
+//*************************************************
+//*************************************************
+//*************** AUDIO - FUN *********************
+//*************************************************
+//*************************************************
+
+alias playsound "p1"
+alias p1 "playvol bot\aw_hell 1; alias playsound p2"
+alias p2 "playvol bot\null 1; alias playsound p3"
+alias p3 "playvol buttons\arena_switch_press_02 1; alias playsound p4"
+alias p4 "playvol buttons\bell1 1; alias playsound p5"
+alias p5 "playvol buttons\blip1 1; alias playsound p6"
+alias p6 "playvol buttons\blip2 1; alias playsound p7"
+alias p7 "playvol buttons\button1 1; alias playsound p8"
+alias p8 "playvol buttons\button10 1; alias playsound p9"
+alias p9 "playvol buttons\button11 1; alias playsound p10"
+alias p10 "playvol buttons\button12 1; alias playsound p11"
+alias p11 "playvol buttons\button13 1; alias playsound p12"
+alias p12 "playvol buttons\button14 1; alias playsound p13"
+alias p13 "playvol buttons\button15 1; alias playsound p14"
+alias p14 "playvol buttons\button16 1; alias playsound p15"
+alias p15 "playvol buttons\button17 1; alias playsound p16"
+alias p16 "playvol buttons\button18 1; alias playsound p17"
+alias p17 "playvol buttons\button19 1; alias playsound p18"
+alias p18 "playvol buttons\button2 1; alias playsound p19"
+alias p19 "playvol buttons\button22 1; alias playsound p20"
+alias p20 "playvol buttons\button24 1; alias playsound p21"
+alias p21 "playvol buttons\button3 1; alias playsound p22"
+alias p22 "playvol buttons\button4 1; alias playsound p23"
+alias p23 "playvol buttons\button5 1; alias playsound p24"
+alias p24 "playvol buttons\button6 1; alias playsound p25"
+alias p25 "playvol buttons\button7 1; alias playsound p26"
+alias p26 "playvol buttons\button8 1; alias playsound p27"
+alias p27 "playvol buttons\button9 1; alias playsound p28"
+alias p28 "playvol buttons\combine_button1 1; alias playsound p29"
+alias p29 "playvol buttons\combine_button2 1; alias playsound p30"
+alias p30 "playvol buttons\combine_button3 1; alias playsound p31"
+alias p31 "playvol buttons\combine_button5 1; alias playsound p32"
+alias p32 "playvol buttons\combine_button7 1; alias playsound p33"
+alias p33 "playvol buttons\combine_button_locked 1; alias playsound p34"
+alias p34 "playvol buttons\latchunlocked2 1; alias playsound p35"
+alias p35 "playvol buttons\lever1 1; alias playsound p36"
+alias p36 "playvol buttons\lever2 1; alias playsound p37"
+alias p37 "playvol buttons\lever3 1; alias playsound p38"
+alias p38 "playvol buttons\lever4 1; alias playsound p39"
+alias p39 "playvol buttons\lever5 1; alias playsound p40"
+alias p40 "playvol buttons\lever6 1; alias playsound p41"
+alias p41 "playvol buttons\lever7 1; alias playsound p42"
+alias p42 "playvol buttons\lever8 1; alias playsound p43"
+alias p43 "playvol buttons\lightswitch2 1; alias playsound p44"
+alias p44 "playvol buttons\light_power_on_switch_01 1; alias playsound p45"
+alias p45 "playvol buttons\weapon_cant_buy 1; alias playsound p46"
+alias p46 "playvol buttons\weapon_confirm 1; alias playsound p1"
+
+alias defP "bind p disablevoice"
+alias altP "bind p keyP"
+alias keyP "playsound"
 
 //*************************************************
 //*************************************************
@@ -285,7 +359,9 @@ alias c5 "exec crosshair_nick_bunyun.cfg; alias change_ch c6"
 alias c6 "exec crosshair_1.cfg; alias change_ch c7"
 alias c7 "exec crosshair_2.cfg; alias change_ch c8"
 alias c8 "exec crosshair_3.cfg; alias change_ch c9"
-alias c9 "exec crosshair_4.cfg; alias change_ch c1"
+alias c9 "exec crosshair_4.cfg; alias change_ch cLast"
+
+alias cLast "exec crosshair_null.cfg; alias change_ch c1; playvol buttons\blip1 0.5"
 
 alias defC "bind c usesmoke"
 alias altC "bind c keyCC"
@@ -375,7 +451,6 @@ alias nades "buyflash; buysgren; buyhegren; buymolotov; buyincgrenade; buyflash"
 //*************************************************
 //*************************************************
 
-bind p disablevoice
 alias "disablevoice" "clutch"
 alias "clutch" "clutchon"
 alias "clutchon" "voice_enable 0; clutchsoundon; gameinstructor_enable 1; cl_clearhinthistory; r_cleardecals; playvol buttons\weapon_confirm 0.5; say_team Clutch mode: ON (text & voice chat are disabled); alias clutch clutchoff"
@@ -391,8 +466,8 @@ alias "clutchsoundoff" "volume 0.5; snd_musicvolume 0; snd_menumusic_volume 0; s
 //*************************************************
 
 alias displaydamage "displaydamage_on"
-alias displaydamage_on "con_filter_text Damage Given To; con_filter_text_out Player:; con_filter_enable 2; developer 1; playvol buttons\blip1 0.5; alias displaydamage "displaydamage_off""
-alias displaydamage_off "con_filter_enable 0; developer 0; playvol buttons\blip2 0.5; alias displaydamage "displaydamage_on""
+alias displaydamage_on "con_filter_text Damage Given To; con_filter_text_out Player:; con_filter_enable 2; developer 1; playvol buttons\blip1 0.5; alias displaydamage displaydamage_off"
+alias displaydamage_off "con_filter_enable 0; developer 0; playvol buttons\blip2 0.5; alias displaydamage displaydamage_on"
 
 //*************************************************
 //*************************************************
@@ -413,10 +488,17 @@ alias right_hand "cl_righthand 1; alias switchHands "left_hand""
 alias alt55 "buyanddrop"
 alias alt5 bind g alt55
 alias def5 "bind g drop"
-alias +altbinds "alt5; altC" //"alte; alt1; alt2; alt3; alt4; alt5; alt6"
-alias -altbinds  "def5; defC" //"defE; def1; def2; def3; def4; def5; def6"
-bind alt +altbinds
 alias "buyanddrop" "buy ak47; buy m4a1; buy m4a1_silencer; slot1; drop"
+
+//*************************************************
+//*************************************************
+//****************** ALTBINDS *********************
+//*************************************************
+//*************************************************
+
+alias +altbinds "alt5; altC; altS; altP" //"alte; alt1; alt2; alt3; alt4; alt5; alt6"
+alias -altbinds "def5; defC; defS; defP" //"defE; def1; def2; def3; def4; def5; def6"
+bind alt +altbinds
 
 //*************************************************
 //*************************************************
@@ -475,9 +557,13 @@ echo ""
 
 bind 0 "slot4"
 bind 1 "slot10"
+// bind 2 ""
 bind 3 "knife"
 bind 4 "useburn"
 bind 5 "usebomb"
+// bind 6 ""
+// bind 7 ""
+// bind 8 ""
 bind 9 "usedecoy"
 bind a "+moveleft"
 bind b "buymenu"
@@ -486,15 +572,19 @@ bind d "+moveright"
 bind e "+use"
 bind f "usenade"
 bind g "drop"
-bind t "+lookatweapon"
+bind h "+spray_menu"
 bind i "show_loadout_toggle"
+// bind j ""
 bind k "callvote"
 bind l "switchHands"
 bind m "teammenu"
 bind n "radio3"
+// bind o ""
+bind p disablevoice
 bind q "lastinv"
 bind r "+reload"
 bind s "+back"
+bind t "+lookatweapon"
 bind u "messagemode2"
 bind v "+voicerecord"
 bind w "+forward"
