modified sens switch

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -120,10 +120,21 @@ zoom_sensitivity_ratio_mouse    "1.0"
 //*************************************************
 
 alias change_sens "sens1"
-alias sens1 "0.1; alias change_sens sens2"
-alias sens1 "0.1; alias change_sens sensLast"
+alias sens1 "sensitivity 0.1; alias change_sens sens2"
+alias sens2 "sensitivity 0.5; alias change_sens sens3"
+alias sens3 "sensitivity 1.0; alias change_sens sens4"
+alias sens4 "sensitivity 1.1; alias change_sens sens5"
+alias sens5 "sensitivity 1.2; alias change_sens sens6"
+alias sens6 "sensitivity 1.3; alias change_sens sens7"
+alias sens7 "sensitivity 1.4; alias change_sens sens8"
+alias sens8 "sensitivity 1.5; alias change_sens sens9"
+alias sens9 "sensitivity 1.6; alias change_sens sens10"
+alias sens10 "sensitivity 1.7; alias change_sens sens11"
+alias sens11 "sensitivity 1.8; alias change_sens sens12"
+alias sens12 "sensitivity 1.9; alias change_sens sens13"
+alias sens13 "sensitivity 2.0; alias change_sens sensLast"
 
-alias sensLast "alias change_sens sens1; playvol buttons\blip1 0.5"
+alias sensLast "alias change_sens sens1; playvol buttons\blip1 1"
 
 alias defS "bind s +back"
 alias altS "bind s keyS"
