fixed console filters and other small stuff..moved big script to script area

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -47,7 +47,10 @@ cl_loadout_colorweaponnames 	"1"
 cl_use_opens_buy_menu           "1" // E opening buy menu
 cl_showhelp                     "0"
 cl_teamid_overhead_always       "1"
-+cl_show_team_equipment
+
+alias teamEQ "teamEQon"
+alias teamEQon "+cl_show_team_equipment; alias teamEQ teamEQoff"
+alias teamEQoff "-cl_show_team_equipment; alias teamEQ teamEQon"
 
 //*************************************************
 //*************************************************
@@ -96,7 +99,7 @@ cl_predictweapons               "1"
 //*************************************************
 //*************************************************
 
-sensitivity                     "1.1"
+//sensitivity                     "1.1"
 
 cl_mouseenable					"1"
 m_customaccel					"0"
@@ -115,40 +118,13 @@ zoom_sensitivity_ratio_mouse    "1.0"
 
 //*************************************************
 //*************************************************
-//***************** SENSITIVITY *******************
-//*************************************************
-//*************************************************
-
-alias change_sens "sens1"
-alias sens1 "sensitivity 0.1; alias change_sens sens2"
-alias sens2 "sensitivity 0.5; alias change_sens sens3"
-alias sens3 "sensitivity 1.0; alias change_sens sens4"
-alias sens4 "sensitivity 1.1; alias change_sens sens5"
-alias sens5 "sensitivity 1.2; alias change_sens sens6"
-alias sens6 "sensitivity 1.3; alias change_sens sens7"
-alias sens7 "sensitivity 1.4; alias change_sens sens8"
-alias sens8 "sensitivity 1.5; alias change_sens sens9"
-alias sens9 "sensitivity 1.6; alias change_sens sens10"
-alias sens10 "sensitivity 1.7; alias change_sens sens11"
-alias sens11 "sensitivity 1.8; alias change_sens sens12"
-alias sens12 "sensitivity 1.9; alias change_sens sens13"
-alias sens13 "sensitivity 2.0; alias change_sens sensLast"
-
-alias sensLast "alias change_sens sens1; playvol buttons\blip1 1"
-
-alias defS "bind s +back"
-alias altS "bind s keyS"
-alias keyS "change_sens"
-
-//*************************************************
-//*************************************************
 //****************** CONSOLE **********************
 //*************************************************
 //*************************************************
 
-con_filter_enable               "2"
-con_filter_text                 "Damage"
-con_filter_text_out             "Player:"
+con_filter_enable               "1" // 1 filters completely, 2 displays filtered text brighter than ot
+alias defaultFilter "con_filter_text Damage;con_filter_text_out Player:"
+defaultFilter
 
 //*************************************************
 //*************************************************
@@ -167,66 +143,8 @@ snd_legacy_surround				"0"
 snd_menumusic_volume            "0"
 lobby_voice_chat_enabled        "0" // voice chat in lobby
 windows_speaker_config          "1" // default=-1 - -1=Automatic 1=Headset 3=4Speakers 4=StereoSpeakers 6=5.1 Surround
-dsp_enhance_stereo              "0" //default=0
+dsp_enhance_stereo              "0" // default=0
 cl_mute_enemy_team              "0"
-
-//*************************************************
-//*************************************************
-//*************** AUDIO - FUN *********************
-//*************************************************
-//*************************************************
-
-alias playsound "p1"
-alias p1 "playvol bot\aw_hell 1; alias playsound p2"
-alias p2 "playvol bot\null 1; alias playsound p3"
-alias p3 "playvol buttons\arena_switch_press_02 1; alias playsound p4"
-alias p4 "playvol buttons\bell1 1; alias playsound p5"
-alias p5 "playvol buttons\blip1 1; alias playsound p6"
-alias p6 "playvol buttons\blip2 1; alias playsound p7"
-alias p7 "playvol buttons\button1 1; alias playsound p8"
-alias p8 "playvol buttons\button10 1; alias playsound p9"
-alias p9 "playvol buttons\button11 1; alias playsound p10"
-alias p10 "playvol buttons\button12 1; alias playsound p11"
-alias p11 "playvol buttons\button13 1; alias playsound p12"
-alias p12 "playvol buttons\button14 1; alias playsound p13"
-alias p13 "playvol buttons\button15 1; alias playsound p14"
-alias p14 "playvol buttons\button16 1; alias playsound p15"
-alias p15 "playvol buttons\button17 1; alias playsound p16"
-alias p16 "playvol buttons\button18 1; alias playsound p17"
-alias p17 "playvol buttons\button19 1; alias playsound p18"
-alias p18 "playvol buttons\button2 1; alias playsound p19"
-alias p19 "playvol buttons\button22 1; alias playsound p20"
-alias p20 "playvol buttons\button24 1; alias playsound p21"
-alias p21 "playvol buttons\button3 1; alias playsound p22"
-alias p22 "playvol buttons\button4 1; alias playsound p23"
-alias p23 "playvol buttons\button5 1; alias playsound p24"
-alias p24 "playvol buttons\button6 1; alias playsound p25"
-alias p25 "playvol buttons\button7 1; alias playsound p26"
-alias p26 "playvol buttons\button8 1; alias playsound p27"
-alias p27 "playvol buttons\button9 1; alias playsound p28"
-alias p28 "playvol buttons\combine_button1 1; alias playsound p29"
-alias p29 "playvol buttons\combine_button2 1; alias playsound p30"
-alias p30 "playvol buttons\combine_button3 1; alias playsound p31"
-alias p31 "playvol buttons\combine_button5 1; alias playsound p32"
-alias p32 "playvol buttons\combine_button7 1; alias playsound p33"
-alias p33 "playvol buttons\combine_button_locked 1; alias playsound p34"
-alias p34 "playvol buttons\latchunlocked2 1; alias playsound p35"
-alias p35 "playvol buttons\lever1 1; alias playsound p36"
-alias p36 "playvol buttons\lever2 1; alias playsound p37"
-alias p37 "playvol buttons\lever3 1; alias playsound p38"
-alias p38 "playvol buttons\lever4 1; alias playsound p39"
-alias p39 "playvol buttons\lever5 1; alias playsound p40"
-alias p40 "playvol buttons\lever6 1; alias playsound p41"
-alias p41 "playvol buttons\lever7 1; alias playsound p42"
-alias p42 "playvol buttons\lever8 1; alias playsound p43"
-alias p43 "playvol buttons\lightswitch2 1; alias playsound p44"
-alias p44 "playvol buttons\light_power_on_switch_01 1; alias playsound p45"
-alias p45 "playvol buttons\weapon_cant_buy 1; alias playsound p46"
-alias p46 "playvol buttons\weapon_confirm 1; alias playsound p1"
-
-alias defP "bind p disablevoice"
-alias altP "bind p keyP"
-alias keyP "playsound"
 
 //*************************************************
 //*************************************************
@@ -344,6 +262,104 @@ echo ""
 
 //*************************************************
 //*************************************************
+//***************** SENSITIVITY *******************
+//*************************************************
+//*************************************************
+
+alias change_sens "sens1"
+alias sens1 "sensitivity 0.1; currentSens; alias change_sens sens2"
+alias sens2 "sensitivity 0.5; currentSens; alias change_sens sens3"
+alias sens3 "sensitivity 1.0; currentSens; alias change_sens sens4"
+alias sens4 "sensitivity 1.1; currentSens; alias change_sens sens5"
+alias sens5 "sensitivity 1.2; currentSens; alias change_sens sens6"
+alias sens6 "sensitivity 1.3; currentSens; alias change_sens sens7"
+alias sens7 "sensitivity 1.4; currentSens; alias change_sens sens8"
+alias sens8 "sensitivity 1.5; currentSens; alias change_sens sens9"
+alias sens9 "sensitivity 1.6; currentSens; alias change_sens sens10"
+alias sens10 "sensitivity 1.7; currentSens; alias change_sens sens11"
+alias sens11 "sensitivity 1.8; currentSens; alias change_sens sens12"
+alias sens12 "sensitivity 1.9; currentSens; alias change_sens sens13"
+alias sens13 "sensitivity 2.0; currentSens; alias change_sens sensLast"
+
+alias sensLast "alias change_sens sens1; playvol buttons\blip1 1"
+
+alias defS "bind s +back"
+alias altS "bind s keyS"
+alias keyS "change_sens"
+
+alias "k1" clear
+alias "k2" developer 2
+alias "k3" con_filter_enable 0
+alias "k4" echo "*********************************************"
+alias "k5" echo "YOUR CURRENT SENSITIVITY SETTINGS"
+alias "k6" echo "*********************************************"
+alias "k7" con_filter_enable 1
+alias "k8" con_filter_text sensitivity
+alias "k9" con_filter_text_out _
+alias "k10" host_writeconfig //
+alias "k11" developer 1
+alias "currentSens" "k1;k2;k3;k4;k5;k6;k7;k8;k9;k10;k11;defaultFilter"
+
+//*************************************************
+//*************************************************
+//*************** AUDIO - FUN *********************
+//*************************************************
+//*************************************************
+
+alias playsound "p1"
+alias p1 "playvol bot\aw_hell 1; alias playsound p2"
+alias p2 "playvol bot\null 1; alias playsound p3"
+alias p3 "playvol buttons\arena_switch_press_02 1; alias playsound p4"
+alias p4 "playvol buttons\bell1 1; alias playsound p5"
+alias p5 "playvol buttons\blip1 1; alias playsound p6"
+alias p6 "playvol buttons\blip2 1; alias playsound p7"
+alias p7 "playvol buttons\button1 1; alias playsound p8"
+alias p8 "playvol buttons\button10 1; alias playsound p9"
+alias p9 "playvol buttons\button11 1; alias playsound p10"
+alias p10 "playvol buttons\button12 1; alias playsound p11"
+alias p11 "playvol buttons\button13 1; alias playsound p12"
+alias p12 "playvol buttons\button14 1; alias playsound p13"
+alias p13 "playvol buttons\button15 1; alias playsound p14"
+alias p14 "playvol buttons\button16 1; alias playsound p15"
+alias p15 "playvol buttons\button17 1; alias playsound p16"
+alias p16 "playvol buttons\button18 1; alias playsound p17"
+alias p17 "playvol buttons\button19 1; alias playsound p18"
+alias p18 "playvol buttons\button2 1; alias playsound p19"
+alias p19 "playvol buttons\button22 1; alias playsound p20"
+alias p20 "playvol buttons\button24 1; alias playsound p21"
+alias p21 "playvol buttons\button3 1; alias playsound p22"
+alias p22 "playvol buttons\button4 1; alias playsound p23"
+alias p23 "playvol buttons\button5 1; alias playsound p24"
+alias p24 "playvol buttons\button6 1; alias playsound p25"
+alias p25 "playvol buttons\button7 1; alias playsound p26"
+alias p26 "playvol buttons\button8 1; alias playsound p27"
+alias p27 "playvol buttons\button9 1; alias playsound p28"
+alias p28 "playvol buttons\combine_button1 1; alias playsound p29"
+alias p29 "playvol buttons\combine_button2 1; alias playsound p30"
+alias p30 "playvol buttons\combine_button3 1; alias playsound p31"
+alias p31 "playvol buttons\combine_button5 1; alias playsound p32"
+alias p32 "playvol buttons\combine_button7 1; alias playsound p33"
+alias p33 "playvol buttons\combine_button_locked 1; alias playsound p34"
+alias p34 "playvol buttons\latchunlocked2 1; alias playsound p35"
+alias p35 "playvol buttons\lever1 1; alias playsound p36"
+alias p36 "playvol buttons\lever2 1; alias playsound p37"
+alias p37 "playvol buttons\lever3 1; alias playsound p38"
+alias p38 "playvol buttons\lever4 1; alias playsound p39"
+alias p39 "playvol buttons\lever5 1; alias playsound p40"
+alias p40 "playvol buttons\lever6 1; alias playsound p41"
+alias p41 "playvol buttons\lever7 1; alias playsound p42"
+alias p42 "playvol buttons\lever8 1; alias playsound p43"
+alias p43 "playvol buttons\lightswitch2 1; alias playsound p44"
+alias p44 "playvol buttons\light_power_on_switch_01 1; alias playsound p45"
+alias p45 "playvol buttons\weapon_cant_buy 1; alias playsound p46"
+alias p46 "playvol buttons\weapon_confirm 1; alias playsound p1"
+
+alias defP "bind p disablevoice"
+alias altP "bind p keyP"
+alias keyP "playsound"
+
+//*************************************************
+//*************************************************
 //************** SHOW NET_GRAPH *******************
 //*************************************************
 //*************************************************
@@ -385,19 +401,19 @@ alias keyCC "change_ch"
 //*************************************************
 
 alias "b1" clear
+alias "b5" developer 2
+alias "b12" con_filter_enable 0
 alias "b2" echo "*********************************************"
 alias "b3" echo "YOUR CURRENT VIEWMODEL SETTINGS"
 alias "b4" echo "*********************************************"
-alias "b5" developer 2
 alias "b6" con_filter_enable 1
 alias "b7" con_filter_text viewmodel
 alias "b8" host_writeconfig //
 alias "b9" con_filter_text view_punch
 alias "b10" host_writeconfig //
 alias "b11" developer 1
-alias "b12" con_filter_enable 0
 alias "b13" showconsole
-alias "showviewmodel" "b1;b2;b3;b4;b5;b6;b7;b8;b9;b10;b11;b12;b13"
+alias "showviewmodel" "b1;b5;b12;b2;b3;b4;b6;b7;b8;b9;b10;b11;b13;defaultFilter"
 
 //*************************************************
 //*************************************************
@@ -406,19 +422,19 @@ alias "showviewmodel" "b1;b2;b3;b4;b5;b6;b7;b8;b9;b10;b11;b12;b13"
 //*************************************************
 
 alias "a1" clear
+alias "a5" developer 2
+alias "a12" con_filter_enable 0
 alias "a2" echo "*********************************************"
 alias "a3" echo "YOUR CURRENT CROSSHAIR SETTINGS"
 alias "a4" echo "*********************************************"
-alias "a5" developer 2
 alias "a6" con_filter_enable 1
 alias "a7" con_filter_text cl_crosshair
 alias "a8" host_writeconfig //
 alias "a9" con_filter_text cl_fix
 alias "a10" host_writeconfig //
 alias "a11" developer 1
-alias "a12" con_filter_enable 0
 alias "a13" showconsole
-alias "showcrosshair" "a1;a2;a3;a4;a5;a6;a7;a8;a9;a10;a11;a12;a13"
+alias "showcrosshair" "a1;a5;a12;a2;a3;a4;a6;a7;a8;a9;a10;a11;a13;defaultFilter"
 
 //*************************************************
 //*************************************************
@@ -476,9 +492,7 @@ alias "clutchsoundoff" "volume 0.5; snd_musicvolume 0; snd_menumusic_volume 0; s
 //*************************************************
 //*************************************************
 
-alias displaydamage "displaydamage_on"
-alias displaydamage_on "con_filter_text Damage Given To; con_filter_text_out Player:; con_filter_enable 2; developer 1; playvol buttons\blip1 0.5; alias displaydamage displaydamage_off"
-alias displaydamage_off "con_filter_enable 0; developer 0; playvol buttons\blip2 0.5; alias displaydamage displaydamage_on"
+
 
 //*************************************************
 //*************************************************
@@ -585,13 +599,13 @@ bind f "usenade"
 bind g "drop"
 bind h "+spray_menu"
 bind i "show_loadout_toggle"
-// bind j ""
+bind j "currentSens"
 bind k "callvote"
 bind l "switchHands"
 bind m "teammenu"
 bind n "radio3"
-// bind o ""
-bind p disablevoice
+bind o "teamEQ"
+bind p "disablevoice"
 bind q "lastinv"
 bind r "+reload"
 bind s "+back"
