--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -122,8 +122,11 @@ zoom_sensitivity_ratio_mouse    "1.0"
 //*************************************************
 //*************************************************
 
-con_filter_enable               "1" // 1 filters completely, 2 displays filtered text brighter than ot
+alias filterEnabled "con_filter_enable 1" // 1 filters completely, 2 displays filtered text brighter than ot
+alias filterDisabled "con_filter_enable 0"
 alias defaultFilter "con_filter_text Damage;con_filter_text_out Player:"
+
+filterEnabled
 defaultFilter
 
 //*************************************************
@@ -289,16 +292,17 @@ alias keyS "change_sens"
 
 alias "k1" clear
 alias "k2" developer 2
-alias "k3" con_filter_enable 0
+alias "k3" filterDisabled
+alias "k12" echo ""
 alias "k4" echo "*********************************************"
 alias "k5" echo "YOUR CURRENT SENSITIVITY SETTINGS"
 alias "k6" echo "*********************************************"
-alias "k7" con_filter_enable 1
+alias "k7" filterEnabled
 alias "k8" con_filter_text sensitivity
 alias "k9" con_filter_text_out _
 alias "k10" host_writeconfig //
 alias "k11" developer 1
-alias "currentSens" "k1;k2;k3;k4;k5;k6;k7;k8;k9;k10;k11;defaultFilter"
+alias "currentSens" "k1;k2;k12;k12;k3;k4;k5;k6;k7;k8;k9;k10;k11;defaultFilter"
 
 //*************************************************
 //*************************************************
@@ -402,18 +406,19 @@ alias keyCC "change_ch"
 
 alias "b1" clear
 alias "b5" developer 2
-alias "b12" con_filter_enable 0
+alias "b12" filterDisabled
+alias "b14" echo ""
 alias "b2" echo "*********************************************"
 alias "b3" echo "YOUR CURRENT VIEWMODEL SETTINGS"
 alias "b4" echo "*********************************************"
-alias "b6" con_filter_enable 1
+alias "b6" filterEnabled
 alias "b7" con_filter_text viewmodel
 alias "b8" host_writeconfig //
 alias "b9" con_filter_text view_punch
 alias "b10" host_writeconfig //
 alias "b11" developer 1
 alias "b13" showconsole
-alias "showviewmodel" "b1;b5;b12;b2;b3;b4;b6;b7;b8;b9;b10;b11;b13;defaultFilter"
+alias "showviewmodel" "b1;b5;b12;b14;b14;b14;b14;b14;b2;b3;b4;b6;b7;b8;b9;b10;b11;b13;defaultFilter"
 
 //*************************************************
 //*************************************************
@@ -423,18 +428,19 @@ alias "showviewmodel" "b1;b5;b12;b2;b3;b4;b6;b7;b8;b9;b10;b11;b13;defaultFilter"
 
 alias "a1" clear
 alias "a5" developer 2
-alias "a12" con_filter_enable 0
+alias "a12" filterDisabled
+alias "a14" echo ""
 alias "a2" echo "*********************************************"
 alias "a3" echo "YOUR CURRENT CROSSHAIR SETTINGS"
 alias "a4" echo "*********************************************"
-alias "a6" con_filter_enable 1
+alias "a6" filterEnabled
 alias "a7" con_filter_text cl_crosshair
 alias "a8" host_writeconfig //
 alias "a9" con_filter_text cl_fix
 alias "a10" host_writeconfig //
 alias "a11" developer 1
 alias "a13" showconsole
-alias "showcrosshair" "a1;a5;a12;a2;a3;a4;a6;a7;a8;a9;a10;a11;a13;defaultFilter"
+alias "showcrosshair" "a1;a5;a12;a14;a14;a14;a14;a14;a2;a3;a4;a6;a7;a8;a9;a10;a11;a13;defaultFilter"
 
 //*************************************************
 //*************************************************
@@ -620,7 +626,7 @@ bind , "buyammo1"
 bind . "buyammo2"
 bind \ "toggleconsole"
 bind "SPACE" "+jump"
-bind "TAB" "+scorenet" //Bind to whatever you prefer (Default TAB)
+bind "TAB" "+scorenet"
 bind "ESCAPE" "cancelselect"
 bind "DEL" "exec autoexec"
 bind "HOME" "showviewmodel"
@@ -652,3 +658,5 @@ echo "autoexec.cfg executed"
 echo ""
 echo ""
 echo ""
+
+currentSens
