--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -122,9 +122,9 @@ zoom_sensitivity_ratio_mouse    "1.0"
 //*************************************************
 //*************************************************
 
-alias filterEnabled "con_filter_enable 1" // 1 filters completely, 2 displays filtered text brighter than ot
+alias filterEnabled "con_filter_enable 2" // 1 filters completely, 2 displays filtered text brighter than ot
 alias filterDisabled "con_filter_enable 0"
-alias defaultFilter "con_filter_text Damage;con_filter_text_out Player:"
+alias defaultFilter "con_filter_text Damage; con_filter_text_out Player"
 
 filterEnabled
 defaultFilter
